--- a/JAVA01_MY/.project
+++ b/JAVA01_MY/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JAVA01</name>
+	<name>JAVA01_MY</name>
 	<comment></comment>
 	<projects>
 	</projects>
