--- a/JAVA03_MY/.classpath
+++ b/JAVA03_MY/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/Administrator/Desktop/HTML/Java/JAVA03_MY/src/Ch08/mysql-connector-j-9.4.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
