--- a/JAVA03_MY/.classpath
+++ b/JAVA03_MY/.classpath
@@ -7,5 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/Users/Administrator/Desktop/HTML/Java/JAVA03_MY/src/Ch08/mysql-connector-j-9.4.0.jar"/>
+	<classpathentry kind="lib" path="src/Ch06/jsoup-1.21.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
